--- a/src/main/resources/templates/nueva.html
+++ b/src/main/resources/templates/nueva.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div th:insert="fragments/nav"></div>
-
+<p>jajajaj hola</p>
 <form action="/nuevaOferta" method="post">
     <input name="titulo">
     <input name="descripcion">
