--- a/src/main/resources/templates/nueva.html
+++ b/src/main/resources/templates/nueva.html
@@ -7,6 +7,7 @@
 <body>
 <div th:insert="fragments/nav"></div>
 <p>jajajaj hola</p>
+<p>hola2</p>
 <form action="/nuevaOferta" method="post">
     <input name="titulo">
     <input name="descripcion">
